Cabal-version:       2.2
Name:                cgrep
Description:         Cgrep: a context-aware grep for source codes
Version:             8.1.0
Synopsis:            Command line tool
Homepage:            http://awgn.github.io/cgrep/
License:             GPL-2.0-or-later
License-file:        LICENSE
Author:              Nicola Bonelli
Maintainer:          Nicola Bonelli <nicola@larthia.com>
Category:            Utils
Build-type:          Simple
Stability:           Experimental
Extra-source-files:  README.md

Common common-options
  build-depends:       base ^>= 4.15.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

Executable cgrep
  Main-Is:             Main.hs
  Hs-Source-Dirs:      src
  Default-Extensions: FlexibleContexts
                      FlexibleInstances
                      GeneralisedNewtypeDeriving
                      DerivingStrategies
                      MultiWayIf
                      LambdaCase
                      OverloadedLists
                      OverloadedRecordDot
                      OverloadedStrings
                      PatternSynonyms
                      RecordWildCards
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      UnboxedSums
                      UnboxedTuples
                      ViewPatterns
                      BangPatterns
                      MagicHash

  Other-Modules:       Options
                       Verbose
                       CmdOptions
                       Util
                       Config
                       Reader
                       Search
                       CGrep.FileType
                       CGrep.FileKind
                       CGrep.FileTypeMap
                       CGrep.ContextFilter
                       CGrep.Types
                       CGrep.Output
                       CGrep.Distance
                       CGrep.Search
                       CGrep.Common
                       CGrep.Boundary
                       CGrep.Parser.Char
                       CGrep.Parser.Chunk
                       CGrep.Parser.Token
                       CGrep.Parser.Atom
                       CGrep.Parser.Line
                       CGrep.Strategy.Semantic
                       CGrep.Strategy.Tokenizer
                       CGrep.Strategy.Levenshtein
                       CGrep.Strategy.BoyerMoore
                       CGrep.Strategy.Regex
                       Paths_cgrep
  Autogen-modules:     Paths_cgrep

  Build-Depends:       base < 5.0,
                       cmdargs,
                       bytestring,
                       directory,
                       filepath,
                       stm,
                       containers,
                       vector,
                       array,
                       ghc-prim,
                       dlist,
                       ansi-terminal,
                       split,
                       safe,
                       stringsearch,
                       unordered-containers,
                       regex-base,
                       regex-posix,
                       regex-pcre,
                       either,
                       mtl,
                       unix-compat,
                       async,
                       utf8-string,
                       unicode-show,
                       transformers,
                       process,
                       aeson,
                       yaml,
                       exceptions,
                       mono-traversable,
                       bytestring-strict-builder,
                       bitwise,
                       mmap,
                       unagi-chan,
                       posix-paths,
                       rawfilepath,
                       monad-loops,
                       deepseq,
                       bitarray,
                       text,
                       extra

  Ghc-options:  -O2 -optc-O3 
                -funbox-strict-fields
                -fwrite-ide-info
                -hiedir=.hie
                -threaded
                -rtsopts "-with-rtsopts=-N -H1g -qn2"

  Default-language:    Haskell2010
