cabal-version: 2.2
name: cgrep
description: Cgrep: a context-aware grep for source codes
version: 8.2.0
synopsis: Command line tool
homepage: http://awgn.github.io/cgrep/
license: GPL-2.0-or-later
license-file: LICENSE
author: Nicola Bonelli
maintainer: Nicola Bonelli <nicola@larthia.com>
category: Utils
build-type: Simple
stability: Experimental
extra-source-files: README.md

flag enable_pcre {
    Description: "Use PCRE regex engine (default: disabled)"
    Default: False
}

common common-options
  build-depends: base ^>=4.15.0.0
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies
  default-language: Haskell2010

executable cgrep
  main-is: Main.hs
  hs-source-dirs: src
  default-extensions:
    CPP
    BangPatterns
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    LambdaCase
    MagicHash
    MultiWayIf
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UnboxedSums
    UnboxedTuples
    ViewPatterns

  other-modules:
    CGrep.Boundary
    CGrep.Common
    CGrep.ContextFilter
    CGrep.Distance
    CGrep.FileKind
    CGrep.FileType
    CGrep.FileTypeMap
    CGrep.Output
    CGrep.Parser.Atom
    CGrep.Parser.Char
    CGrep.Parser.Chunk
    CGrep.Parser.Line
    CGrep.Parser.Token
    CGrep.Search
    CGrep.Strategy.BoyerMoore
    CGrep.Strategy.Levenshtein
    CGrep.Strategy.Regex
    CGrep.Strategy.Semantic
    CGrep.Strategy.Tokenizer
    CGrep.Types
    CmdOptions
    Config
    Options
    OsPath
    Paths_cgrep
    PutMessage
    Reader
    Search
    Util

  autogen-modules: Paths_cgrep
  build-depends:
    aeson,
    ansi-terminal,
    array,
    async,
    base <5.0,
    bitarray,
    bitwise,
    bytestring,
    bytestring-strict-builder,
    containers,
    deepseq,
    directory,
    dlist,
    either,
    exceptions,
    extra,
    filepath,
    ghc-prim,
    mmap,
    monad-loops,
    mono-traversable,
    mtl,
    optparse-applicative,
    os-string,
    process,
    regex-base,
    regex-posix,
    safe,
    split,
    stm,
    stringsearch,
    text,
    transformers,
    unagi-chan,
    unicode-show,
    unix-compat,
    unordered-containers,
    utf8-string,
    vector,
    yaml,

  ghc-options:
    -O2
    -optc-O3
    -funbox-strict-fields
    -fwrite-ide-info
    -hiedir=.hie
    -threaded
    -rtsopts
    "-with-rtsopts=-N -H1g -qn2"

  if flag (enable_pcre) {
     build-depends: regex-pcre
     cpp-options: -DENABLE_PCRE
  }

  default-language: Haskell2010
